--- a/devops.html
+++ b/devops.html
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://demos.join.com/jobs/467712-devops-engineer-m-w-d'>Job @ DEMOS E-Partizipation (Berlin): DevOps Engin... | JOIN</a></h5> 
+<h5><a href='https://demos.join.com/jobs/467712-devops-engineer-m-w-d'>Job @ DEMOS E-Partizipation (Berlin): DevOps Engin... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -62,7 +62,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://yiluhub.join.com/jobs/473968-senior-devops-engineer'>Job @ Yilu Travel Services (Berlin): Senior DevOps... | JOIN</a></h5> 
+<h5><a href='https://yiluhub.join.com/jobs/473968-senior-devops-engineer'>Job @ Yilu Travel Services (Berlin): Senior DevOps... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -124,7 +124,7 @@
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/klarna/0d8e6a52-cbc5-4be8-9ee7-c8debcf97eee'>Klarna - Engineering Manager - DevOps & Automation</a></h5> 
+<h5><a href='https://jobs.lever.co/klarna/0d8e6a52-cbc5-4be8-9ee7-c8debcf97eee'>Klarna - Engineering Manager - DevOps & Automation</a></h5> 
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -156,11 +156,11 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Linkbynet/743999698570837-devops-consultant'>Linkbynet Data Essential | DevOps Consultant | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Linkbynet/743999698570837-devops-consultant'>Linkbynet Data Essential | DevOps Consultant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Luxembourg</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/storj/jobs/4375474002'>Job Application for DevOps Engineer at Storj</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/storj/jobs/4375474002'>Job Application for DevOps Engineer at Storj</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -282,7 +282,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://scripbox.recruiterbox.com/jobs/fk03o6w/'>
+<h5><a href='https://scripbox.recruiterbox.com/jobs/fk03o6w/'>
     Devops Engineer at Scripbox Advisors Private Limited
 </a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
@@ -296,7 +296,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://runtastic.recruiterbox.com/jobs/fk03i5k/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://runtastic.recruiterbox.com/jobs/fk03i5k/'>
     DevOps Engineer at Runtastic GmbH
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -431,7 +431,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/stars-group/job/ogyrbfwa'>The Stars Group Careers - Graduate DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/stars-group/job/ogyrbfwa'>The Stars Group Careers - Graduate DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
