--- a/software.html
+++ b/software.html
@@ -39,16 +39,24 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/medallia/83272129-c5d9-42ca-9723-a6aadfb6eae5'>Medallia - Sr. Software Engineer, Backend (APIs)</a></h5> 
+<p><span class="badge badge-light">Austin, TX</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://coinjobs.org/job/software-developer-specialized-in-c-at-akka-technologies-spain-s-l-u/'>Software developer specialized in C++ at AKKA TECHNOLOGIES SPAIN S.L.U. ? CoinJobs</a></h5> 
+<p><span class="badge badge-light">Madrid, Spain</span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
 <h5><a href='https://ghdltd.referrals.selectminds.com/jobs/consultant-software-engineer-london-2381'>Consultant Software Engineer - London - GHD Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qNc9VfwN&k=Job&j=ooUrbfwE&__jvst=Employee+Referral&__jvsd=sQfHFgwc&__jvsc=Twitter&bid=nysiqMwZ'>Workiva Inc. Careers - Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=owK89fwh&__jvst=Employee+Referral&__jvsd=svdfVgwD&__jvsc=Twitter&bid=ntmiqMwO'>Palo Alto Networks Careers - Intern - Prisma Access Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=owK89fwh&__jvst=Employee+Referral&__jvsd=svdfVgwD&__jvsc=Twitter&bid=ntmiqMwO'>Palo Alto Networks Careers - Intern - Prisma Access Software Engineer</a></h5> 
+<p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://4re.referrals.selectminds.com/jobs/software-engineer-iii-27184'>Software Engineer III - RELX Careers</a></h5> 
@@ -95,7 +103,7 @@
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/gigamon/job/o1gkbfww'>Gigamon Careers - Senior Staff Software Engineer - GigaSmart</a></h5> 
+<h5><a href='https://jobs.jobvite.com/gigamon/job/o1gkbfww'>Gigamon Careers - Senior Staff Software Engineer - GigaSmart</a></h5> 
 <p><span class="badge badge-light">Chennai Chennai, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -157,7 +165,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drchrono/a83259b8-5c90-4995-bdb4-4a9e365f8657'>DrChrono - Director of Software Engineering</a></h5> 
+<h5><a href='https://jobs.lever.co/drchrono/a83259b8-5c90-4995-bdb4-4a9e365f8657'>DrChrono - Director of Software Engineering</a></h5> 
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -263,7 +271,7 @@
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698508963-senior-software-engineer-continuous-integration-infrastructure'>Square Senior Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698508963-senior-software-engineer-continuous-integration-infrastructure'>Square Senior Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -275,7 +283,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://sportsrecruitsllc.applytojob.com/apply/lyX1OR2loi/Software-Developer-Summer-Internship'>Software Developer Summer Internship - SportsRecruits - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://sportsrecruitsllc.applytojob.com/apply/lyX1OR2loi/Software-Developer-Summer-Internship'>Software Developer Summer Internship - SportsRecruits - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -283,7 +291,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kalo/20d763ee-f95b-45a1-8975-359d010dd676'>Kalo - Senior Back-End Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/kalo/20d763ee-f95b-45a1-8975-359d010dd676'>Kalo - Senior Back-End Software Engineer</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -299,7 +307,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/auth0/b9928c33-e285-4a4f-aef4-d4d5198d166d'>Auth0 - Full Stack Software Engineer, Service Management - CS Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/auth0/b9928c33-e285-4a4f-aef4-d4d5198d166d'>Auth0 - Full Stack Software Engineer, Service Management - CS Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -343,7 +351,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698601705-senior-software-engineer'>Renaissance Senior Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698601705-senior-software-engineer'>Renaissance Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -363,7 +371,7 @@
 <p><span class="badge badge-light">Barcelona, Spain  Barcelona, Spain</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://raisin.join.com/jobs/452387-senior-software-engineer-front-end-m-f-d'>Job @ Raisin (Berlin): (Senior) Software Engineer ... | JOIN</a></h5> 
+<h5><a href='https://raisin.join.com/jobs/452387-senior-software-engineer-front-end-m-f-d'>Job @ Raisin (Berlin): (Senior) Software Engineer ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -395,7 +403,7 @@
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lbl.referrals.selectminds.com/jobs/software-engineer-usable-software-systems-and-integrated-data-frameworks-2298'>Software Engineer - Usable Software Systems and Integrated Data FRameworks - LBL Careers</a></h5> 
+<h5><a href='https://lbl.referrals.selectminds.com/jobs/software-engineer-usable-software-systems-and-integrated-data-frameworks-2298'>Software Engineer - Usable Software Systems and Integrated Data FRameworks - LBL Careers</a></h5> 
 <p><span class="badge badge-light">United States  Berkeley</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -434,14 +442,6 @@
 <h5><a href='https://boards.greenhouse.io/teacherspayteachers/jobs/1931831'>Job Application for Software Engineer, Data at TeachersPayTeachers</a></h5> 
 <p><span class="badge badge-light">New York, NY  Canada Australia</span></p>
 <p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/teacherspayteachers/jobs/1933099'>Job Application for Senior Software Engineer, Data at TeachersPayTeachers</a></h5> 
-<p><span class="badge badge-light">New York  Canada Australia</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oDGvafwI&__jvst=Employee+Referral&__jvsd=smYmMgwd&__jvsc=Twitter&bid=nhoLpMw6'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
-<p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
-<p>Posted on:: 2019-10-31</p>
 <hr/>
 
 
