--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/cnfa.org/632a5fca-d939-427b-a4b0-43cd0f31fb89'>Cultivating New Frontiers in Agriculture (CNFA) - Gender, Youth, and Social Dynamics (GYSD) Lead - Zimbabwe</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Altenar/743999696105190-frontend-developer'>Altenar Frontend developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
@@ -222,7 +226,7 @@
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://parent.recruitee.com/o/senior-frontend-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://parent.recruitee.com/o/senior-frontend-developer'>
       Senior Frontend Developer - Parent ApS
     </a></h5> 
 <p><span class="badge badge-light">Cairo, Egypt</span></p>
@@ -236,7 +240,7 @@
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cerebralgroup.applytojob.com/apply/Q3m8i5Ls3E/Front-End-Developer'>Front End Developer - Cerebral Staffing, LLC - Career Page</a></h5> 
+<h5><a href='http://cerebralgroup.applytojob.com/apply/Q3m8i5Ls3E/Front-End-Developer'>Front End Developer - Cerebral Staffing, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -244,7 +248,7 @@
 <p><span class="badge badge-light">K?ln, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4finance.recruiterbox.com/jobs/fk03ioy/'>
+<h5><a href='https://4finance.recruiterbox.com/jobs/fk03ioy/'>
     Senior Frontend Developer at 4Finance IT
 </a></h5> 
 <p><span class="badge badge-light">Prague</span></p>
@@ -254,7 +258,7 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698547010-shopify-front-end-developer'>outsourced Shopify Front End Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698547010-shopify-front-end-developer'>outsourced Shopify Front End Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -266,7 +270,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698289067-senior-software-engineer-front-end'>Optimizely Senior Software Engineer, Front End | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698289067-senior-software-engineer-front-end'>Optimizely Senior Software Engineer, Front End | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -298,15 +302,15 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://getcaya.join.com/jobs/471531-react-native-front-end-developer-m-w-x'>Job @ CAYA (Berlin): (REACT NATIVE) FRONT-END DEVE... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://getcaya.join.com/jobs/471531-react-native-front-end-developer-m-w-x'>Job @ CAYA (Berlin): (REACT NATIVE) FRONT-END DEVE... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://coinjobs.org/job/senior-front-end-engineer-at-blockchain/'>Senior Front End Engineer at Blockchain ? CoinJobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coinjobs.org/job/senior-front-end-engineer-at-blockchain/'>Senior Front End Engineer at Blockchain ? CoinJobs</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://rbauction.referrals.selectminds.com/jobs/front-end-developer-2854'>Front-End Developer - Ritchie Bros. Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rbauction.referrals.selectminds.com/jobs/front-end-developer-2854'>Front-End Developer - Ritchie Bros. Careers</a></h5> 
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -452,12 +456,8 @@
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471356-software-engineer-frontend'>SmartRecruiters Inc Software Engineer, Frontend | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471356-software-engineer-frontend'>SmartRecruiters Inc Software Engineer, Frontend | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/dynamit/d150104d-ebd5-40f8-8779-21c0e13c2e3d'>Dynamit - Sr Front End Developer</a></h5> 
-<p><span class="badge badge-light">Columbus, Ohio</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
