--- a/machine.html
+++ b/machine.html
@@ -68,7 +68,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.smartrecruiters.com/DataFactory/743999698501134-machine-learning-engineer-remote'>DataFactory Machine Learning Engineer - Remote | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://careercyresconsulting.recruitee.com/o/praktikantwerkstudent-data-sciencemachine-learning-wmd'>
@@ -121,11 +121,11 @@
 <p><span class="badge badge-light">Raleigh , North Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://mlconf.com/job/oracle-redwood-city-ca-6-job-description-senior-software-development-engineer-machine-learning-oci-data-science-cloud-service-19001b4y-senior-software-development-engineer-machine-learning/'>Job Description - Senior Software Development Engineer - Machine Learning - OCI Data Science Cloud Service (19001B4Y) Senior Software Development Engineer - Machine Learning - OCI Data Science Cloud Service 19001B4Y - The Machine Learning Conference</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mlconf.com/job/oracle-redwood-city-ca-6-job-description-senior-software-development-engineer-machine-learning-oci-data-science-cloud-service-19001b4y-senior-software-development-engineer-machine-learning/'>Job Description - Senior Software Development Engineer - Machine Learning - OCI Data Science Cloud Service (19001B4Y) Senior Software Development Engineer - Machine Learning - OCI Data Science Cloud Service 19001B4Y - The Machine Learning Conference</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://careers.unity.com/position/program-manager-machine-learning/1859735?gh_src=c7ad02fb1'>Unity Careers - Program Manager, Machine Learning, AI@Unity @ Bellevue</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.unity.com/position/program-manager-machine-learning/1859735?gh_src=c7ad02fb1'>Unity Careers - Program Manager, Machine Learning, AI@Unity @ Bellevue</a></h5> 
 <p><span class="badge badge-light">Bellevue  Bellevue  Bellevue</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -174,7 +174,7 @@ learning and computer vision to join our team.</p>
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shiru/cd135ef8-87db-49b9-a105-1eef8146ca6c'>Shiru - (Senior) Computational biologist/machine learning researcher</a></h5> 
+<h5><a href='https://jobs.lever.co/shiru/cd135ef8-87db-49b9-a105-1eef8146ca6c'>Shiru - (Senior) Computational biologist/machine learning researcher</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -190,7 +190,7 @@ learning and computer vision to join our team.</p>
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698304306-stage-data-mise-en-uvre-d-une-solution-en-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION EN MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698304306-stage-data-mise-en-uvre-d-une-solution-en-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION EN MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -207,7 +207,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Expeditors/743999698180457-data-analyst-ii-iii-machine-learning-'>Expeditors Data Analyst II/III (Machine Learning) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Expeditors/743999698180457-data-analyst-ii-iii-machine-learning-'>Expeditors Data Analyst II/III (Machine Learning) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -270,7 +270,7 @@ the center of our core mission, building state of the art technologies. You will
 reinforcement learning and transfer learning) to real world problems. Provide 
 research?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cityblockhealth/jobs/4477740002?gh_jid=4477740002'>Job Application for Senior Data Scientist, Machine Learning at ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cityblockhealth/jobs/4477740002?gh_jid=4477740002'>Job Application for Senior Data Scientist, Machine Learning at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... We are looking for a Data Scientist, Machine Learning Engineer, or Research 
 Engineer to join the Cityblock Prototype Engineering team. You will work with?...</p>
@@ -283,7 +283,7 @@ Engineer to join the Cityblock Prototype Engineering team. You will work with?..
 <p><span class="badge badge-light">Campbell Campbell</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/sensynehealth/j/6358903D5A/'>Machine Learning Researcher - Sensyne Health</a></h5> 
+<h5><a href='https://apply.workable.com/sensynehealth/j/6358903D5A/'>Machine Learning Researcher - Sensyne Health</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>14 hours ago ... Hands-on experience using one of the following deep learning libraries: 
 Tensorflow, PyTorch, Theano or similar. Experience of analysing clinical/
@@ -445,7 +445,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1843542'>Job Application for Machine Learning Intern at Sony Interactive Entertainment PlayStation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1843542'>Job Application for Machine Learning Intern at Sony Interactive Entertainment PlayStation</a></h5> 
 <p><span class="badge badge-light">Santa Monica</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -490,7 +490,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/meliuz/fecbac18-2251-4a03-8a8b-f7627f314f21'>Meliuz - Pessoa Engenheira de Machine Learning S?nior</a></h5> 
+<h5><a href='https://jobs.lever.co/meliuz/fecbac18-2251-4a03-8a8b-f7627f314f21'>Meliuz - Pessoa Engenheira de Machine Learning S?nior</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
